--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .idea
 .code
 .ipynb_checkpoints
+.env
 
 ### Latex
 build
@@ -86,9 +87,6 @@ acs-*.bib
 # endnotes
 *.ent
 
-# fixme
-*.lox
-
 # feynmf/feynmp
 *.mf
 *.mp
@@ -153,8 +151,6 @@ acs-*.bib
 
 # knitr
 *-concordance.tex
-# TODO Uncomment the next line if you use knitr and want to ignore its generated tikz files
-# *.tikz
 *-tikzDictionary
 
 # listings
@@ -242,9 +238,6 @@ pythontex-files-*/
 # vhistory
 *.hst
 *.ver
-
-# easy-todo
-*.lod
 
 # xcolor
 *.xcp
